# slide2flashcard

./: .gitignore  README.md  main.py  pyproject.toml  slide2flashcard.db  slide2flashcard_structure 1.md
backend/: main.py  slide2flashcard.db
backend/api/v1/: decks.py  flashcards.py  reviews.py  stats.py  upload.py
backend/core/: database.py
backend/models/: deck.py  flashcard.py  processing_job.py  review.py  user_progress.py
backend/schemas/: deck.py  flashcard.py  review.py
backend/services/: spaced_repetition.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/common/: Badge.jsx  LoadingSpinner.jsx  ProgressBar.jsx  ProgressRing.jsx
frontend/src/components/deck/: DeckCard.jsx  DeckList.jsx  DeckProgress.jsx
frontend/src/components/flashcard/: CardBack.jsx  CardFront.jsx  FlashCard.jsx  RatingButtons.jsx
frontend/src/components/upload/: ProcessingStatus.jsx  UploadZone.jsx
frontend/src/constants/: index.js
frontend/src/hooks/: useDeck.js  useStudySession.js  useUpload.js
frontend/src/pages/: DeckDetail.jsx  Home.jsx  Stats.jsx  StudySession.jsx  Upload.jsx
frontend/src/store/: deckStore.js  studyStore.js
ml/: config.yaml  main.py  pipeline.py  run_pipeline.py
ml/src/common/: utils.py
ml/src/content/: engine.py  run.py
ml/src/crop_diagram/: README.md  diversity_selector.py  engine.py  image_embedder.py  run.py  spatial_cluster.py
ml/src/crop_diagram/generic/: background.py  crawl_diagrams.py  main.py  (+1 more)
ml/src/ocr_text/: engine.py  run.py
(+32 files in other folders)
