[project]
name = "slide2flashcard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "numpy>=2.4.6",
    "ollama>=0.6.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "pymupdf>=1.27.2.3",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "ultralytics>=8.4.72",
]
